# hack-evening-2025-2

./: .gitignore  00_agenda.html  01_intro.html  02_end.html  02_submission.html  03_end.html  03_feedback.html  04_feedback.html  404.html  README.md  print.html  searchindex.js  toc.html  toc.js
.github/workflows/: benchmark-and-test-pr.yml  benchmark-pr.yml  check-pr.yml  flamegraph-pr.yml  gh-pages.yml
.tools/: README.md  run-benchmark.sh  update-leaderboard.sh
01_opportunities/: 01_cli.html  02_threading.html  03_optimization-ideas.html  SUMMARY.html
20_leaderboard/: SUMMARY.html
20_leaderboard/results/: hovinen.json  marcoow.json
data-generator/: Cargo.toml
data-generator/src/: data.rs  main.rs
guide/: book.toml
guide/src/: 00_agenda.md  01_intro.md  01a_optimization-ideas.md  02_submission.md  03_end.md  04_feedback.md  SUMMARY.md
guide/src/01_opportunities/: 01_cli.md  02_threading.md  03_optimization-ideas.md  SUMMARY.md
guide/src/20_leaderboard/: SUMMARY.md
samples/: expected-results-small.txt  input-large.csv  input-medium.csv  input-small.csv  weather_100.csv  weather_100K.csv  weather_1K.csv
samples/expected/: weather_100.txt
solution/: Cargo.toml
solution/src/: main.rs
solutions/Akaame/: Cargo.toml
solutions/Akaame/src/: main.rs
solutions/alexsotocx/: Cargo.toml
solutions/alexsotocx/src/: main.rs
solutions/barsuhn/: Cargo.toml
solutions/barsuhn/src/: command.rs  main.rs  weather.rs
solutions/girstenbrei/: Cargo.toml
solutions/hovinen/: Cargo.toml
solutions/iOperator/: Cargo.toml
solutions/marcoow/: Cargo.toml
(+13 files in other folders)
