[package]
name = "data-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
# The clap crate is a command-line argument parser for Rust.
clap = { version = "4", features = ["derive"] }
# The indicatif crate can show progress bars in CLIs.
indicatif = "0.17"
# The rand crate has utilities for random number generation.
rand = "0.8"
# The rand_distr crate has probability distributions.
rand_distr = "0.4"
